--- a/css-bootcamp/index.html
+++ b/css-bootcamp/index.html
@@ -40,8 +40,7 @@
     <h2 title=" Section '1' Here ">Section 1</h2>
    <p contentedittable="true" spellcheck="false">This is a paragraph with the conte attribute. , which allows users to edit</p>
   </div>     
-  
-<!--  Section 2  -->
+  !--  Section 2  -->
   <div id="section2">
 <!--   use title attribute only when needed    -->
    <h2 title="Section 2">Section 2</h2>
@@ -51,9 +50,28 @@
 <!--    src , alt witdth height  attributes  -->
    <img src="https://www.codetropic.com/images/undraw_writing-down.png" width="100" height="100" alt="image of person at work"> <br /><br />
     
+     <img src="https://www.codetropic.com/images/undraw_writing-down.png" width="300" height="300" alt="image of person at work"> <br /><br />
+    
 <!--    type , value, placeholder for inputs  -->
     <label for="username">Username:</label>
-    <input type="text" id="username"></input>
-  </div>
+    <input type="text" id="username" value="" placeholder="Enter your username" ></input><br /><br />
+  
+<!--  email input, for attribute  -->
+  <label for="email">Email</label>
+  <input type="text" id="email" placeholder="Enter your email" autocomplete="false"></input><br /><br />
+  
+<!--   diabled atttribute -->
+  <input type="text" placehoder="this input is disabled" value="test value" readonly>
+  
+<!--   check attribute --> 
+  <input type="checkbox" checked>
+  
+<!--   selected attribute -->
+  <select name="options" id="optionSelect">
+         <option value="option1">Option 1</option>
+         <option value="option1" selected>Option 2</option>
+
+         </select>
+
   </body>
   </html>
