--- a/css-bootcamp/index.html
+++ b/css-bootcamp/index.html
@@ -7,7 +7,7 @@
     <title>Html basic elements</title>
     <link  rel="icon"  type="image/png"  href=""  />
  
-    <link rel="stylesheet" type="text/css" href="style.css" />
+    <link rel="stylesheet" type="text/css" href="./style.css" />
   </head>
 <body>
 <!-- Main header topic-->
@@ -30,7 +30,19 @@
     cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
     proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
   </section>
-
+ 
+  <div class="container">
+  <div class="item">1</div>
+  <div class="item i2 ">2</div>
+  <div class="item">3</div>
+  <div class="item i4">4</div>
+  <div class="item">5</div>
+</div>
+<!-- flex and grid go in parent element  
+     -->
+<!--  in this lecture we  want 
+to focus on the flexbox   propertise  that we apply-->  
+  
 
   </body>
   </html>
