--- a/css-bootcamp/index.html
+++ b/css-bootcamp/index.html
@@ -1,48 +1,44 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Html basic elements</title>
-    <link  rel="icon"  type="image/png"  href=""  />
- 
-    <link rel="stylesheet" type="text/css" href="./style.css" />
-  </head>
-<body>
-<!-- Main header topic-->
-  <button class="btn btn-primary">Default</button>
-  <header>
-    <nav>
-      <ul>
-        <li>Home</li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="login.html">Login</a></li>
-      </ul>
-    </nav>
-  </header>
-  <section>
-    <h2>Home</h2>
-    <p> <a href="homeindex2.html">Go to a similar page</a>, consectetur adipisicing elit, sed do eiusmod
-    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-    consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-    cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-    proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-  </section>
- 
-  <div class="container">
-  <div class="item">1</div>
-  <div class="item i2 ">2</div>
-  <div class="item">3</div>
-  <div class="item i4">4</div>
-  <div class="item">5</div>
-</div>
-<!-- flex and grid go in parent element  
-     -->
-<!--  in this lecture we  want 
-to focus on the flexbox   propertise  that we apply-->  
-  
+<html>
+<head>
+  <title>Natours | Exciting tours for adventurous people
+ </title>
+   <meta charset="UTF-8">
+  <meta name="description" content="CSS ">
+  <meta name="keywords" content="Get started ">
+  <meta name="author" content=" author ">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="./css/style.css">
+   <link rel="shortcut icon" type="image/png" href="img/favicon.png">
 
-  </body>
-  </html>
+  </head>    
+<body>
+  <!-- add header 1. with background make it p
+   position relative -->
+ <header class="header">
+  <!--  position: relative  -->
+  <div class="header__logo-box">
+    <img src="img/logo-white.png" alt="logl" class="header__logo">
+    </div>
+    <!--  align in center with absolute positionning -->
+   <div class="header__text-box">
+     <h1 class="heading-primary">
+      <span class="heading-primary--main">Outdoors</span>
+      <span class="heading-primary--sub">is where life happens</span>
+    </h1>
+          <!-- button hover  -->
+           
+     <a href="#"  class="btn btn-white">Discover our tours</a>
+
+   </div>
+   
+  </header>
+<!-- Use 2 primary colors , images with text should 
+ compliment each other -->
+
+
+</body>
+</html>
